Stacks 2.0
--------------------------------
    Feature: Cleaned up tags/snps/alleles/matches files. We removed the batch ID from ustacks and cstacks 
             output, and the deprecated log likelihood fields from ustacks and cstacks. We also removed 
             the chromosome/bp/strand fields as they are no longer used in these files.
    Bugfix: Updated to HTSLib 1.7; changed to a custom build system that will work with the Stacks build
            system.
    Bugfix: Made gapped alignments mandatory in ustacks, cstacks, and sstacks. Added check for frameshift 
            at 3' end of the read -- if found, a match is deferred to the gapped aligner.

Stacks 2.0 Beta 8 - Feb 03, 2018
--------------------------------
    Feature: populations: Now calculated deviation from Hardy-Weinberg equilibrium at the SNP level
             (using an exact test), and at the haplotype level (using Guo+Thompson's MCMC algorithm).
    Feature: populations: Added an export type for FineRADStructure.
    Feature: populations: Added the GQ/GL fields in the VCF SNPs output.
    Feature: gstacks: Made the default behavior regarding paired-end reads more logical (in
             reference-based mode --paired has been replaced with --unpaired).
    Feature: gstacks: Added details about samples and coverages to the log outputs.
    Feautre: Added enzymes NspI, BbvCI, fixed BfuCI.
    Bugfix:  corrected a major performance bottleneck in populations when smoothing population statistics
             across the genome.
    Bugfix:  populations: The VCF output now preserves the input sample order.
    Bugfix:  gstacks: Fixed the handling of a rare special case in the PCR duplicates code.
    Bugfix:  gstacks: Fixed 100% being added to all per-thread timings.

Stacks 2.0 Beta 7 - Dec 29, 2017
--------------------------------
    Feature: gstacks: Added an option to remove PCR duplicates based on insert
             size (--rm-pcr-duplicates, plus the related --rm-unpaired-reads).